--- a/Lecture 02/lecture0201.ipynb
+++ b/Lecture 02/lecture0201.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,9 +52,9 @@
        "\n",
        "// Loading the compiled MathBox bundle.\n",
        "require.config({\n",
-       "    baseUrl:'', paths: { mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
+       "    //baseUrl:'', paths: { mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
        "    // online compilation\n",
-       "    //baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
+       "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
        "    // online compilation without local library-- remove baseUrl\n",
        "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
        "});\n",
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
