Fixed path in Lecture 02

--- a/Lecture 02/lecture0201.ipynb
+++ b/Lecture 02/lecture0201.ipynb
@@ -54,7 +54,7 @@
        "require.config({\n",
        "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle',graphing: '../../tree/static/graphing/graphing'}\n",
        "    // online compilation\n",
-       "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle', graphing: '../../static/graphing/graphing'}\n",
+       "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle', graphing: '../static/graphing/graphing'}\n",
        "    // online compilation without local library-- remove baseUrl\n",
        "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
        "});\n",
@@ -77,7 +77,7 @@
     "require.config({\n",
     "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle',graphing: '../../tree/static/graphing/graphing'}\n",
     "    // online compilation\n",
-    "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle', graphing: '../../static/graphing/graphing'}\n",
+    "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle', graphing: '../static/graphing/graphing'}\n",
     "    // online compilation without local library-- remove baseUrl\n",
     "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
     "});\n",
