Test for nbviewer service.

--- a/Lecture 02/lecture0201.ipynb
+++ b/Lecture 02/lecture0201.ipynb
@@ -59,6 +59,54 @@
        "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
        "});\n",
        "\n",
+       "// Helper function that setups WebGL context and initializes MathBox.\n",
+       "window.with_mathbox = function(element, func) {\n",
+       "    require(['mathBox'], function(){\n",
+       "            var mathbox = mathBox({\n",
+       "                                  plugins: ['core', 'controls', 'cursor', 'mathbox'],\n",
+       "                                  controls: { klass: THREE.OrbitControls },\n",
+       "                                  mathbox: {inspect: false},\n",
+       "                                  element: element[0],\n",
+       "                                  loop: {start: false},\n",
+       "                                  \n",
+       "                                  });\n",
+       "            \n",
+       "            var three = mathbox.three;\n",
+       "            three.renderer.setClearColor(new THREE.Color(0xFFFFFF), 1.0);\n",
+       "            three.camera.position.set(-1, 1, 2);\n",
+       "            three.controls.noKeys = true;\n",
+       "            \n",
+       "            three.element.style.height = \"400px\";\n",
+       "            three.element.style.width = \"100%\";\n",
+       "            \n",
+       "            function isInViewport(element) {\n",
+       "            var rect = element.getBoundingClientRect();\n",
+       "            var html = document.documentElement;\n",
+       "            var w = window.innerWidth || html.clientWidth;\n",
+       "            var h = window.innerHeight || html.clientHeight;\n",
+       "            return rect.top < h && rect.left < w && rect.bottom > 0 && rect.right > 0;\n",
+       "            }\n",
+       "            \n",
+       "            // Running update/render loop only for visible plots.\n",
+       "            var intervalId = setInterval(function(){\n",
+       "                                         if (three.element.offsetParent === null) {\n",
+       "                                         clearInterval(intervalId);\n",
+       "                                         three.destroy();\n",
+       "                                         return;\n",
+       "                                         }\n",
+       "                                         var visible = isInViewport(three.canvas);\n",
+       "                                         if (three.Loop.running != visible) {\n",
+       "                                         visible? three.Loop.start() : three.Loop.stop();\n",
+       "                                         }\n",
+       "                                         }, 100);\n",
+       "            \n",
+       "            func(mathbox);\n",
+       "            \n",
+       "            window.dispatchEvent(new Event('resize'));\n",
+       "            })\n",
+       "};\n",
+       "\n",
+       "\n",
        "// Require commands for 3d plotting\n",
        "require(['graphing'])"
       ],
@@ -81,6 +129,54 @@
     "    // online compilation without local library-- remove baseUrl\n",
     "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
     "});\n",
+    "\n",
+    "// Helper function that setups WebGL context and initializes MathBox.\n",
+    "window.with_mathbox = function(element, func) {\n",
+    "    require(['mathBox'], function(){\n",
+    "            var mathbox = mathBox({\n",
+    "                                  plugins: ['core', 'controls', 'cursor', 'mathbox'],\n",
+    "                                  controls: { klass: THREE.OrbitControls },\n",
+    "                                  mathbox: {inspect: false},\n",
+    "                                  element: element[0],\n",
+    "                                  loop: {start: false},\n",
+    "                                  \n",
+    "                                  });\n",
+    "            \n",
+    "            var three = mathbox.three;\n",
+    "            three.renderer.setClearColor(new THREE.Color(0xFFFFFF), 1.0);\n",
+    "            three.camera.position.set(-1, 1, 2);\n",
+    "            three.controls.noKeys = true;\n",
+    "            \n",
+    "            three.element.style.height = \"400px\";\n",
+    "            three.element.style.width = \"100%\";\n",
+    "            \n",
+    "            function isInViewport(element) {\n",
+    "            var rect = element.getBoundingClientRect();\n",
+    "            var html = document.documentElement;\n",
+    "            var w = window.innerWidth || html.clientWidth;\n",
+    "            var h = window.innerHeight || html.clientHeight;\n",
+    "            return rect.top < h && rect.left < w && rect.bottom > 0 && rect.right > 0;\n",
+    "            }\n",
+    "            \n",
+    "            // Running update/render loop only for visible plots.\n",
+    "            var intervalId = setInterval(function(){\n",
+    "                                         if (three.element.offsetParent === null) {\n",
+    "                                         clearInterval(intervalId);\n",
+    "                                         three.destroy();\n",
+    "                                         return;\n",
+    "                                         }\n",
+    "                                         var visible = isInViewport(three.canvas);\n",
+    "                                         if (three.Loop.running != visible) {\n",
+    "                                         visible? three.Loop.start() : three.Loop.stop();\n",
+    "                                         }\n",
+    "                                         }, 100);\n",
+    "            \n",
+    "            func(mathbox);\n",
+    "            \n",
+    "            window.dispatchEvent(new Event('resize'));\n",
+    "            })\n",
+    "};\n",
+    "\n",
     "\n",
     "// Require commands for 3d plotting\n",
     "require(['graphing'])\n"
