--- a/Lecture 02/lecture0201.ipynb
+++ b/Lecture 02/lecture0201.ipynb
@@ -52,63 +52,22 @@
        "\n",
        "// Loading the compiled MathBox bundle.\n",
        "require.config({\n",
-       "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle',graphing: '../../tree/static/graphing/graphing'}\n",
+       "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
        "    // online compilation\n",
-       "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle', graphing: '../static/graphing/graphing'}\n",
+       "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
        "    // online compilation without local library-- remove baseUrl\n",
        "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
        "});\n",
        "\n",
-       "// Helper function that setups WebGL context and initializes MathBox.\n",
-       "window.with_mathbox = function(element, func) {\n",
-       "    require(['mathBox'], function(){\n",
-       "            var mathbox = mathBox({\n",
-       "                                  plugins: ['core', 'controls', 'cursor', 'mathbox'],\n",
-       "                                  controls: { klass: THREE.OrbitControls },\n",
-       "                                  mathbox: {inspect: false},\n",
-       "                                  element: element[0],\n",
-       "                                  loop: {start: false},\n",
-       "                                  \n",
-       "                                  });\n",
-       "            \n",
-       "            var three = mathbox.three;\n",
-       "            three.renderer.setClearColor(new THREE.Color(0xFFFFFF), 1.0);\n",
-       "            three.camera.position.set(-1, 1, 2);\n",
-       "            three.controls.noKeys = true;\n",
-       "            \n",
-       "            three.element.style.height = \"400px\";\n",
-       "            three.element.style.width = \"100%\";\n",
-       "            \n",
-       "            function isInViewport(element) {\n",
-       "            var rect = element.getBoundingClientRect();\n",
-       "            var html = document.documentElement;\n",
-       "            var w = window.innerWidth || html.clientWidth;\n",
-       "            var h = window.innerHeight || html.clientHeight;\n",
-       "            return rect.top < h && rect.left < w && rect.bottom > 0 && rect.right > 0;\n",
-       "            }\n",
-       "            \n",
-       "            // Running update/render loop only for visible plots.\n",
-       "            var intervalId = setInterval(function(){\n",
-       "                                         if (three.element.offsetParent === null) {\n",
-       "                                         clearInterval(intervalId);\n",
-       "                                         three.destroy();\n",
-       "                                         return;\n",
-       "                                         }\n",
-       "                                         var visible = isInViewport(three.canvas);\n",
-       "                                         if (three.Loop.running != visible) {\n",
-       "                                         visible? three.Loop.start() : three.Loop.stop();\n",
-       "                                         }\n",
-       "                                         }, 100);\n",
-       "            \n",
-       "            func(mathbox);\n",
-       "            \n",
-       "            window.dispatchEvent(new Event('resize'));\n",
-       "            })\n",
-       "};\n",
+       "// Minified graphing functions\n",
        "\n",
-       "\n",
-       "// Require commands for 3d plotting\n",
-       "require(['graphing'])"
+       "window.with_mathbox=function(element,func){require(['mathBox'],function(){var mathbox=mathBox({plugins:['core','controls','cursor','mathbox'],controls:{klass:THREE.OrbitControls},mathbox:{inspect:!1},element:element[0],loop:{start:!1},});var three=mathbox.three;three.renderer.setClearColor(new THREE.Color(0xFFFFFF),1.0);three.camera.position.set(-1,1,2);three.controls.noKeys=!0;three.element.style.height=\"400px\";three.element.style.width=\"100%\";function isInViewport(element){var rect=element.getBoundingClientRect();var html=document.documentElement;var w=window.innerWidth||html.clientWidth;var h=window.innerHeight||html.clientHeight;return rect.top<h&&rect.left<w&&rect.bottom>0&&rect.right>0}\n",
+       "var intervalId=setInterval(function(){if(three.element.offsetParent===null){clearInterval(intervalId);three.destroy();return}\n",
+       "var visible=isInViewport(three.canvas);if(three.Loop.running!=visible){visible?three.Loop.start():three.Loop.stop()}},100);func(mathbox);window.dispatchEvent(new Event('resize'))})};window.plotGraph=function(mathbox,f,xlabel='x',ylabel='y',zlabel='f(x,y)',rng=[[-3,3],[-5,5],[-3,3]]){var view=mathbox.cartesian({range:rng,scale:[1,1,1]},{rotation:(t)=>[0,t*0.02,0]}).grid({axes:[1,3]})\n",
+       "view.area({id:'yaxis',width:1,height:1,axes:[1,3],expr:function(emit,x,y,i,j){emit(4,0,0);emit(0,0,0)},items:2,channels:3,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(ylabel)},}).label({color:'#000000',snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1});view.vector({points:'#yaxis',color:0x000000,width:9,start:!0});view.area({id:'xaxis',width:1,height:1,axes:[1,3],expr:function(emit,x,y,i,j){emit(0,0,4);emit(0,0,0)},items:2,channels:3,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(xlabel)},}).label({color:'#000000',snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1,});view.vector({points:'#xaxis',color:0x000000,width:9,start:!0,});view.area({id:'zaxis',width:1,height:1,axes:[1,3],expr:function(emit,x,y,i,j){emit(0,4,0);emit(0,0,0)},items:2,channels:3,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(zlabel)},}).label({color:'#000000',snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1,});view.vector({points:'#zaxis',color:0x000000,width:9,start:!0,});var graph=view.area({id:'graph',width:64,height:64,axes:[1,3],expr:function(emit,y,x,i,j){emit(y,f(x,y),x)},items:1,channels:3,});view.surface({shaded:!0,lineX:!0,lineY:!0,points:graph,color:0x0000FF,width:1,});return view};window.addSegment=function(view,p0,p1,col){view.array({width:128,expr:function(emit,i,time){var b=i/128;var a=1-b;emit(a*p0[1]+b*p1[1],a*p0[2]+b*p1[2],a*p0[0]+b*p1[0])},channels:3,});view.line({color:col,width:10,size:2.5,stroke:'dotted',start:!1,end:!1,})};window.addPoint=function(view,p,col,label){view.array({width:4,items:2,channels:3,expr:function(emit,i,t){emit(p[1],p[2],p[0])},}).point({color:col,points:'<',size:15,depth:.5,zBias:50,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(label)},}).label({color:col,snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1,})};window.addCurve=function(view,ab,x,y,z,col){view.array({width:128,expr:function(emit,i,time){var t=(ab[1]-ab[0])*(i/128)+ab[0];emit(y(t),z(t),x(t))},channels:3,});view.line({color:col,width:20,size:2.5,start:!0,end:!0,})};window.addClosedCurve=function(view,ab,x,y,z,col){view.array({width:128,expr:function(emit,i,time){var t=(ab[1]-ab[0])*(i/128)+ab[0];emit(y(t),z(t),x(t))},channels:3,});view.line({color:col,width:20,size:2.5,start:!1,end:!1,})};window.addSurface=function(view,ab,cd,x,y,z,col,opa){view.matrix({width:64,height:64,expr:function(emit,i,j,time){var p=(ab[1]-ab[0])*(i/64)+ab[0];var q=(cd[1]-cd[0])*(j/64)+cd[0];emit(y(p,q),z(p,q),x(p,q))},items:1,channels:3}).surface({shaded:!0,lineX:!1,lineY:!1,color:col,width:1,opacity:opa})}\n",
+       "window.addSequence=function(view,seq,col){var idx=0;var d=new Date();var start=d.getTime();view.array({width:1,expr:function(emit,i,time){var nd=new Date();var now=nd.getTime();if(1000<now-start){idx=idx+1;if(seq.length<=idx){idx=0}\n",
+       "start=now}\n",
+       "emit(seq[idx][1],seq[idx][2],seq[idx][0])},items:1,channels:3}).point({color:col,points:'<',size:15,depth:.5,zBias:50,})}"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -123,63 +82,22 @@
     "\n",
     "// Loading the compiled MathBox bundle.\n",
     "require.config({\n",
-    "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle',graphing: '../../tree/static/graphing/graphing'}\n",
+    "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
     "    // online compilation\n",
-    "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle', graphing: '../static/graphing/graphing'}\n",
+    "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
     "    // online compilation without local library-- remove baseUrl\n",
     "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
     "});\n",
     "\n",
-    "// Helper function that setups WebGL context and initializes MathBox.\n",
-    "window.with_mathbox = function(element, func) {\n",
-    "    require(['mathBox'], function(){\n",
-    "            var mathbox = mathBox({\n",
-    "                                  plugins: ['core', 'controls', 'cursor', 'mathbox'],\n",
-    "                                  controls: { klass: THREE.OrbitControls },\n",
-    "                                  mathbox: {inspect: false},\n",
-    "                                  element: element[0],\n",
-    "                                  loop: {start: false},\n",
-    "                                  \n",
-    "                                  });\n",
-    "            \n",
-    "            var three = mathbox.three;\n",
-    "            three.renderer.setClearColor(new THREE.Color(0xFFFFFF), 1.0);\n",
-    "            three.camera.position.set(-1, 1, 2);\n",
-    "            three.controls.noKeys = true;\n",
-    "            \n",
-    "            three.element.style.height = \"400px\";\n",
-    "            three.element.style.width = \"100%\";\n",
-    "            \n",
-    "            function isInViewport(element) {\n",
-    "            var rect = element.getBoundingClientRect();\n",
-    "            var html = document.documentElement;\n",
-    "            var w = window.innerWidth || html.clientWidth;\n",
-    "            var h = window.innerHeight || html.clientHeight;\n",
-    "            return rect.top < h && rect.left < w && rect.bottom > 0 && rect.right > 0;\n",
-    "            }\n",
-    "            \n",
-    "            // Running update/render loop only for visible plots.\n",
-    "            var intervalId = setInterval(function(){\n",
-    "                                         if (three.element.offsetParent === null) {\n",
-    "                                         clearInterval(intervalId);\n",
-    "                                         three.destroy();\n",
-    "                                         return;\n",
-    "                                         }\n",
-    "                                         var visible = isInViewport(three.canvas);\n",
-    "                                         if (three.Loop.running != visible) {\n",
-    "                                         visible? three.Loop.start() : three.Loop.stop();\n",
-    "                                         }\n",
-    "                                         }, 100);\n",
-    "            \n",
-    "            func(mathbox);\n",
-    "            \n",
-    "            window.dispatchEvent(new Event('resize'));\n",
-    "            })\n",
-    "};\n",
+    "// Minified graphing functions\n",
     "\n",
-    "\n",
-    "// Require commands for 3d plotting\n",
-    "require(['graphing'])\n"
+    "window.with_mathbox=function(element,func){require(['mathBox'],function(){var mathbox=mathBox({plugins:['core','controls','cursor','mathbox'],controls:{klass:THREE.OrbitControls},mathbox:{inspect:!1},element:element[0],loop:{start:!1},});var three=mathbox.three;three.renderer.setClearColor(new THREE.Color(0xFFFFFF),1.0);three.camera.position.set(-1,1,2);three.controls.noKeys=!0;three.element.style.height=\"400px\";three.element.style.width=\"100%\";function isInViewport(element){var rect=element.getBoundingClientRect();var html=document.documentElement;var w=window.innerWidth||html.clientWidth;var h=window.innerHeight||html.clientHeight;return rect.top<h&&rect.left<w&&rect.bottom>0&&rect.right>0}\n",
+    "var intervalId=setInterval(function(){if(three.element.offsetParent===null){clearInterval(intervalId);three.destroy();return}\n",
+    "var visible=isInViewport(three.canvas);if(three.Loop.running!=visible){visible?three.Loop.start():three.Loop.stop()}},100);func(mathbox);window.dispatchEvent(new Event('resize'))})};window.plotGraph=function(mathbox,f,xlabel='x',ylabel='y',zlabel='f(x,y)',rng=[[-3,3],[-5,5],[-3,3]]){var view=mathbox.cartesian({range:rng,scale:[1,1,1]},{rotation:(t)=>[0,t*0.02,0]}).grid({axes:[1,3]})\n",
+    "view.area({id:'yaxis',width:1,height:1,axes:[1,3],expr:function(emit,x,y,i,j){emit(4,0,0);emit(0,0,0)},items:2,channels:3,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(ylabel)},}).label({color:'#000000',snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1});view.vector({points:'#yaxis',color:0x000000,width:9,start:!0});view.area({id:'xaxis',width:1,height:1,axes:[1,3],expr:function(emit,x,y,i,j){emit(0,0,4);emit(0,0,0)},items:2,channels:3,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(xlabel)},}).label({color:'#000000',snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1,});view.vector({points:'#xaxis',color:0x000000,width:9,start:!0,});view.area({id:'zaxis',width:1,height:1,axes:[1,3],expr:function(emit,x,y,i,j){emit(0,4,0);emit(0,0,0)},items:2,channels:3,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(zlabel)},}).label({color:'#000000',snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1,});view.vector({points:'#zaxis',color:0x000000,width:9,start:!0,});var graph=view.area({id:'graph',width:64,height:64,axes:[1,3],expr:function(emit,y,x,i,j){emit(y,f(x,y),x)},items:1,channels:3,});view.surface({shaded:!0,lineX:!0,lineY:!0,points:graph,color:0x0000FF,width:1,});return view};window.addSegment=function(view,p0,p1,col){view.array({width:128,expr:function(emit,i,time){var b=i/128;var a=1-b;emit(a*p0[1]+b*p1[1],a*p0[2]+b*p1[2],a*p0[0]+b*p1[0])},channels:3,});view.line({color:col,width:10,size:2.5,stroke:'dotted',start:!1,end:!1,})};window.addPoint=function(view,p,col,label){view.array({width:4,items:2,channels:3,expr:function(emit,i,t){emit(p[1],p[2],p[0])},}).point({color:col,points:'<',size:15,depth:.5,zBias:50,}).text({font:'Helvetica',style:'bold',width:16,height:5,depth:2,expr:function(emit,i,j,k,time){emit(label)},}).label({color:col,snap:!1,outline:2,size:24,offset:[0,-32],depth:.5,zIndex:1,})};window.addCurve=function(view,ab,x,y,z,col){view.array({width:128,expr:function(emit,i,time){var t=(ab[1]-ab[0])*(i/128)+ab[0];emit(y(t),z(t),x(t))},channels:3,});view.line({color:col,width:20,size:2.5,start:!0,end:!0,})};window.addClosedCurve=function(view,ab,x,y,z,col){view.array({width:128,expr:function(emit,i,time){var t=(ab[1]-ab[0])*(i/128)+ab[0];emit(y(t),z(t),x(t))},channels:3,});view.line({color:col,width:20,size:2.5,start:!1,end:!1,})};window.addSurface=function(view,ab,cd,x,y,z,col,opa){view.matrix({width:64,height:64,expr:function(emit,i,j,time){var p=(ab[1]-ab[0])*(i/64)+ab[0];var q=(cd[1]-cd[0])*(j/64)+cd[0];emit(y(p,q),z(p,q),x(p,q))},items:1,channels:3}).surface({shaded:!0,lineX:!1,lineY:!1,color:col,width:1,opacity:opa})}\n",
+    "window.addSequence=function(view,seq,col){var idx=0;var d=new Date();var start=d.getTime();view.array({width:1,expr:function(emit,i,time){var nd=new Date();var now=nd.getTime();if(1000<now-start){idx=idx+1;if(seq.length<=idx){idx=0}\n",
+    "start=now}\n",
+    "emit(seq[idx][1],seq[idx][2],seq[idx][0])},items:1,channels:3}).point({color:col,points:'<',size:15,depth:.5,zBias:50,})}"
    ]
   },
   {
