Updated Lecture2, Lecture3.

--- a/Lecture 03/lecture0303.ipynb
+++ b/Lecture 03/lecture0303.ipynb
@@ -323,36 +323,52 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "for very small $\\Delta\\theta$. Letting\n",
+    "for very small $\\Delta\\theta$, and hence \n",
+    "\n",
+    "$$\n",
+    "\\lim_{\\Delta\\theta\\rightarrow 0} \\frac{f(\\varphi(\\theta+\\Delta\\theta))-f(\\varphi(\\theta))}{\\Delta\\theta}\n",
+    "$$\n",
+    "\n",
+    "becomes\n",
+    "\n",
+    "$$\n",
+    "\\lim_{\\Delta\\theta\\rightarrow 0} \\frac{f(\\varphi_1(\\theta)+\\varphi_1^\\prime(\\theta)\\Delta\\theta, \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta) - f(\\varphi_1(\\theta),\\varphi_2(\\theta))}{\\Delta\\theta}.\n",
+    "$$\n",
+    "\n",
+    "Adding and subtracting $f(\\varphi_1(\\theta), \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta)$ in the numerator of the limit yields\n",
+    "\n",
+    "$$\n",
+    "\\lim_{\\Delta\\theta\\rightarrow 0} \\frac{f(\\varphi_1(\\theta)+\\varphi_1^\\prime(\\theta)\\Delta\\theta, \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta) - f(\\varphi_1(\\theta), \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta) + f(\\varphi_1(\\theta), \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta) -f(\\varphi_1(\\theta),\\varphi_2(\\theta))}{\\Delta\\theta},\n",
+    "$$\n",
+    "\n",
+    "but\n",
+    "\n",
+    "$$\n",
+    "\\lim_{\\Delta\\theta\\rightarrow 0} \\frac{f(\\varphi_1(\\theta)+\\varphi_1^\\prime(\\theta)\\Delta\\theta, \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta) - f(\\varphi_1(\\theta), \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta)}{\\varphi_1^\\prime(\\theta)\\Delta\\theta}\\varphi_1^\\prime(\\theta) = \\frac{\\partial f}{\\partial x}(\\varphi(\\theta))\\varphi_1^\\prime(\\theta)\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\lim_{\\Delta\\theta\\rightarrow 0} \\frac{ f(\\varphi_1(\\theta), \\varphi_2(\\theta)+\\varphi_2^\\prime(\\theta)\\Delta\\theta) -f(\\varphi_1(\\theta),\\varphi_2(\\theta))}{\\varphi_2^\\prime(\\theta)\\Delta\\theta}\\varphi_2^\\prime(\\theta) = \\frac{\\partial f}{\\partial y}(\\varphi(\\theta))\\varphi_2^\\prime(\\theta).\n",
+    "$$\n",
+    "\n",
+    "Now, the chain rule can be expressed as\n",
+    "\n",
+    "$$\n",
+    "\\frac{d (f\\circ{\\bf \\varphi})}{d\\theta}(\\theta) = \\frac{\\partial f}{\\partial x}({\\bf \\varphi}(\\theta)) \\frac{d\\varphi_1}{d\\theta}(\\theta) + \\frac{\\partial f}{\\partial y}({\\bf \\varphi}(\\theta)) \\frac{d\\varphi_2}{d\\theta}(\\theta) = \\nabla f(\\varphi(\\theta))^T\\varphi^\\prime(\\theta)\n",
+    "$$\n",
+    "\n",
+    "where\n",
     "\n",
     "$$\n",
     "\\varphi^\\prime(\\theta) = \\begin{pmatrix}\n",
     "\\varphi_1^\\prime(\\theta)\\\\\n",
     "\\varphi_2^\\prime(\\theta)\n",
-    "\\end{pmatrix},\n",
+    "\\end{pmatrix}.\n",
     "$$\n",
     "\n",
-    "we have $\\varphi(\\theta+\\Delta\\theta)\\approx \\varphi(\\theta) + \\Delta\\theta\\varphi^\\prime(\\theta)$.\n",
-    "\n",
-    "The first order approximation to $f$ at $\\varphi(\\theta)$ is\n",
-    "\n",
-    "$$\n",
-    "f({\\bf x}) \\approx f(\\varphi(\\theta)) + \\nabla f(\\varphi(\\theta))^T ({\\bf x}-\\varphi(\\theta)).\n",
-    "$$\n",
-    "\n",
-    "Plugging in ${\\bf x} = \\varphi(\\theta) +\\Delta\\theta \\varphi^\\prime(\\theta)$, we have\n",
-    "\n",
-    "$$\n",
-    "f(\\varphi(\\theta + \\Delta\\theta))\\approx f(\\varphi(\\theta)+\\Delta\\theta\\varphi^\\prime(\\theta))\\approx f(\\varphi(\\theta))+\\nabla f(\\varphi(\\theta))^T\\varphi^\\prime(\\theta) \\Delta \\theta.\n",
-    "$$\n",
-    "\n",
-    "This is a first order approximation to $f\\circ\\varphi$ at $\\theta$, and it can be rigorously established that this is **the** first order Taylor approximation to $f\\circ\\varphi$ at $\\theta$. Therefore\n",
-    "\n",
-    "$$\n",
-    "(f\\circ\\varphi)^\\prime(\\theta) = \\nabla f(\\varphi(\\theta))^T\\varphi^\\prime(\\theta)= \\frac{\\partial f}{\\partial x}({\\bf \\varphi}(\\theta)) \\frac{d\\varphi_1}{d\\theta}(\\theta) + \\frac{\\partial f}{\\partial y}({\\bf \\varphi}(\\theta)) \\frac{d\\varphi_2}{d\\theta}(\\theta)\n",
-    "$$\n",
-    "\n",
-    "The necessary conditions for optimality are then that $\\nabla f(\\varphi(\\theta^\\ast))^T\\phi^\\prime(\\theta)=0$, and therefore the gradient $\\nabla f(\\varphi(\\theta^\\ast))$ is **orthogonal** or **perpendicular** (${\\bf v},{\\bf w}\\in\\mathbb{R}^2$ are orthogonal if ${\\bf v}^T{\\bf w}=0$) to the tangent $\\varphi^\\prime(\\theta^\\ast)$. On the other hand, we know that\n",
+    "Thus, the necessary condition for optimality is that the gradient $\\nabla f(\\theta^\\ast)$ is **orthogonal** or **perpendicular** (${\\bf v},{\\bf w}\\in\\mathbb{R}^2$ are orthogonal if ${\\bf v}^T{\\bf w}=0$) to the tangent $\\varphi^\\prime(\\theta^\\ast)$. On the other hand, we know that\n",
     "\n",
     "$$\n",
     "g(\\varphi(\\theta))=0\n",
@@ -361,14 +377,12 @@
     "and hence\n",
     "\n",
     "$$\n",
-    "0 = \\frac{d(g\\circ\\varphi)}{d\\theta}(\\theta)=\\nabla g(\\varphi(\\theta))^T\\varphi^\\prime(\\theta))\n",
+    "0 = \\frac{d(g\\circ\\varphi)}{d\\theta}(\\theta)=\\nabla g(\\varphi(\\theta))^T\\phi^\\prime(\\theta))\n",
     "$$\n",
     "\n",
     "for all $\\theta$. So, we also know that $\\varphi^\\prime(\\theta^\\ast)$ is also orthogonal to $\\nabla g(\\varphi(\\theta^\\ast))$. Since $\\varphi^\\prime(\\theta^\\ast)\\not={\\bf 0}$, and we are in 2D, it must be the case that $\\nabla f(\\theta^\\ast)$ and $\\nabla g(\\theta^\\ast)$ are parallel, and hence there is a $\\lambda\\in\\mathbb{R}$ such that $\\nabla f(\\theta^\\ast)=\\lambda \\nabla g(\\theta^\\ast)$. This reasoning justifies the theory of **Lagrange multipliers**, which provides necessary conditions for constrained optimization in 2D with a single inequality constraint.\n",
     "\n",
     "#### Theorem (Lagrange Multipliers): If $f,g \\in C^1(\\mathbb{R}^2)$ and ${\\bf x}^\\ast$ is a minimizer of $f$ subject to  the constraint $g({\\bf x}^\\ast)=0$ satisfying $\\nabla g({\\bf x}^\\ast)\\not={\\bf 0}$, then there exists a $\\lambda\\in\\mathbb{R}$ such that $\\nabla f({\\bf x}^\\ast)=\\lambda\\nabla g({\\bf x}^\\ast)$.\n",
-    "\n",
-    "Geometrically, we can think of $-\\nabla f$ pointing in the direction of greatest local decrease of the function $f$, and the tangent to a parameterization of $g({\\bf x})=0$ around a solution must be orthogonal to this, or we could locally decrease the function further. \n",
     "\n",
     "\n",
     "## Group Questions\n",
