Added examples to Lecture 01, fixed typos in 02

--- a/Lecture 02/lecture0201.ipynb
+++ b/Lecture 02/lecture0201.ipynb
@@ -52,9 +52,9 @@
        "\n",
        "// Loading the compiled MathBox bundle.\n",
        "require.config({\n",
-       "    baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
+       "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
        "    // online compilation\n",
-       "    //baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
+       "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
        "    // online compilation without local library-- remove baseUrl\n",
        "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
        "});\n",
@@ -82,9 +82,9 @@
     "\n",
     "// Loading the compiled MathBox bundle.\n",
     "require.config({\n",
-    "    baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
+    "    //baseUrl:'', paths: {mathBox: '../../tree/static/mathbox/build/mathbox-bundle'}\n",
     "    // online compilation\n",
-    "    //baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
+    "    baseUrl: '', paths: {mathBox: '../static/mathbox/build/mathbox-bundle'}\n",
     "    // online compilation without local library-- remove baseUrl\n",
     "    //paths: {mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'}\n",
     "});\n",
@@ -170,7 +170,7 @@
     "$$\n",
     "(P):\\:\\:\\min_{(x,y)\\in\\mathbb{R}^2} f(x,y).\n",
     "$$\n",
-    "A **solution** to this program is any $(x^\\ast,y^\\ast)\\in\\mathbb{R}^2$ satisfying $f(x^\\ast,y^\\ast)\\leq f(x, y)$ for any $x,y\\in\\mathbb{R}^2$, and two programs are **equivalent** if they have the same solutions. Note that, if $\\phi:\\mathbb{R}\\rightarrow\\mathbb{R}$ is **order preserving**, then\n",
+    "A **solution** to this program is any $(x^\\ast,y^\\ast)\\in\\mathbb{R}^2$ satisfying $f(x^\\ast,y^\\ast)\\leq f(x, y)$ for any $(x,y)\\in\\mathbb{R}^2$, and two programs are **equivalent** if they have the same solutions. Note that, if $\\phi:\\mathbb{R}\\rightarrow\\mathbb{R}$ is **order preserving**, then\n",
     "$$\n",
     "\\min_{(x,y)\\in\\mathbb{R}^2} \\phi(f(x,y))\n",
     "$$\n",
