--- a/Lecture 02/lecture0201.ipynb
+++ b/Lecture 02/lecture0201.ipynb
@@ -117,7 +117,7 @@
     "$$\n",
     "a bivariate function $f:\\mathbb{R}^2\\rightarrow\\mathbb{R}$ can be represented by the graph\n",
     "$$\n",
-    "\\{(x, y, f(x, y): (x,y)\\in\\mathbb{R}^2\\}\\subset\\mathbb{R}^3.\n",
+    "\\{(x, y, f(x, y)): (x,y)\\in\\mathbb{R}^2\\}\\subset\\mathbb{R}^3.\n",
     "$$"
    ]
   },
@@ -170,7 +170,7 @@
     "$$\n",
     "(P):\\:\\:\\min_{(x,y)\\in\\mathbb{R}^2} f(x,y).\n",
     "$$\n",
-    "A **solution** to this program is any $(x^\\ast,y^\\ast)\\in\\mathbb{R}^2$ satisfying $f(x^\\ast,y^\\ast)\\leq f(x, y)$ for any $(x,y)\\in\\mathbb{R}^2$, and two programs are **equivalent** if they have the same solutions. Note that, if $\\phi:\\mathbb{R}\\rightarrow\\mathbb{R}$ is **order preserving**, then\n",
+    "A **solution** to this program is any $(x^\\ast,y^\\ast)\\in\\mathbb{R}^2$ satisfying $f(x^\\ast,y^\\ast)\\leq f(x, y)$ for any $(x,y)\\in\\mathbb{R}^2$, and two programs are **equivalent** if they have the same solutions. Note that, if $\\phi:\\mathbb{R}\\rightarrow\\mathbb{R}$ is **order preserving** ($\\phi(x) < \\phi(y)$ if $x<y$), then\n",
     "$$\n",
     "\\min_{(x,y)\\in\\mathbb{R}^2} \\phi(f(x,y))\n",
     "$$\n",
@@ -193,7 +193,7 @@
     "\\min f(x,y)\\text{ subject to } g_i(x,y)=0\\text{ and }h_j(x,y)\\leq 0\\text{ for all }i=1,\\ldots, n\\text{ and }j=1,\\ldots, m.\n",
     "$$\n",
     "\n",
-    "The set $X$ is called the **feasible region**. The program is called **feasible** if $X\\not=\\emptyset$, and is called **infeasible** otherwise. A point $(x, y)\\in X$ is called a **feasible point** or simply **feasible**. If $(x,y)\\in X$ and $h_j(x,y)<0$ for all $j=1,\\ldots, m$, then $(x,y)$ is called **strictly feasible**. \n",
+    "The set $X$ is called the **feasible region**. The program is called **feasible** if $X\\not=\\emptyset$, and is called **infeasible** otherwise. A point $(x, y)\\in X$ is called a **feasible point** or simply **feasible**. If $(x,y)\\in X$ and $h_j(x,y)<0$ for all $j=1,\\ldots, m$, then $(x,y)$ is called **strictly feasible** or an **interior point**. \n",
     "\n",
     "### Example: \n",
     "$$\n",
@@ -202,9 +202,15 @@
     "\n",
     "In this example, $g_1(x, y) = 1 - x^2 - y^2$, $h_1(x, y) = -x$, and $h_2(x, y)=-y$.\n",
     "\n",
-    "The path to understanding constrained optimization over $\\mathbb{R}^2$ passes through a thorough understanding of unconstrained optimization over $\\mathbb{R}^2$. We will return to this topic when we have the necessary tools to make sense of things.\n",
-    "\n",
-    "\n",
+    "The path to understanding constrained optimization over $\\mathbb{R}^2$ passes through a thorough understanding of unconstrained optimization over $\\mathbb{R}^2$. We will return to this topic when we have the necessary tools to make sense of things.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
     "## Group Problems\n",
     "\n",
     "1. Suppose $f:\\mathbb{R}^2\\rightarrow\\mathbb{R}$ and that $(x^\\ast, y^\\ast)$ is a solution to $\\displaystyle\\min_{(x,y)\\in\\mathbb{R}^2} f(x, y)$. Explain why $x^\\ast$ is a solution to $\\displaystyle\\min_{x\\in\\mathbb{R}} f(x, y^\\ast)$ and $y^\\ast$ is a solution to $\\displaystyle\\min_{y\\in\\mathbb{R}} f(x^\\ast, y)$.\n",
@@ -212,7 +218,7 @@
     "3. Suppose $f:\\mathbb{R}^2\\rightarrow\\mathbb{R}$. For each $y\\in \\mathbb{R}$, suppose that $x^\\ast(y)\\in\\mathbb{R}$ is the unique solution to $\\min_{x\\in\\mathbb{R}} f(x,y)$. If $y^\\ast$ is a solution to $\\min_{y\\in\\mathbb{R}}f(x^\\ast(y), y)$, explain why $(x^\\ast(y^\\ast), y^\\ast)$ is a solution to $\\displaystyle \\min_{(x,y)\\in\\mathbb{R}^2}f(x,y)$.\n",
     "4. The **epigraph** form of a 1D optimization program $\\displaystyle \\min_{x\\in\\mathbb{R}}f(x)$ is the constrained program $\\displaystyle\\min_{(x,t)\\in\\mathbb{R}^2} t$ subject to $f(x)\\leq t$. If $x^\\ast$ solves the original 1D program, show that there is a $t^\\ast$ such that $(x^\\ast, t^\\ast)$ solves the epigraph reformulation.\n",
     "5. Again considering the epigraph reformulation of a 1D program explained in GP 3, explain why if $(x^\\ast, t^\\ast)$ solves the epigraph program, then $x^\\ast$ is a solution to the original program.\n",
-    "6. Convert the equality-constrained program $\\displaystyle \\min 2x^2 + 2xy + 2y^2$ subject to $x^2+y^2=1$ into a 1D optimization program. Solve the original program by solving the 1D reformulation. Solution: $x=\\cos(\\theta)$ and $y=\\sin(theta)$. Then $x^2 + y^2=1$. This converts the program into $\\min 2\\cos^2(\\theta) + 2\\cos(\\theta)\\sin(\\theta)+2\\sin^2(\\theta)$. Using trig, we know that this is $\\min 2 + \\sin(2\\theta)$. Then $2\\cos(2\\theta)=0$ implies $\\theta^\\ast=\\pi/4, 3\\pi/4, 5\\pi/4, 7\\pi/4$\n",
+    "6. Convert the equality-constrained program $\\displaystyle \\min 2x^2 + 2xy + 2y^2$ subject to $x^2+y^2=1$ into a 1D optimization program. Solve the original program by solving the 1D reformulation. Solution: $x=\\cos(\\theta)$ and $y=\\sin(\\theta)$. Then $x^2 + y^2=1$. This converts the program into $\\min 2\\cos^2(\\theta) + 2\\cos(\\theta)\\sin(\\theta)+2\\sin^2(\\theta)$. Using trig, we know that this is $\\min 2 + \\sin(2\\theta)$. Then $2\\cos(2\\theta)=0$ implies $\\theta^\\ast=\\pi/4, 3\\pi/4, 5\\pi/4, 7\\pi/4$\n",
     "7. Convert the equality-constrained program $\\displaystyle \\min 2x^2 + 2xy + 2y^2$ subject to $xy=1$ into a 1D optimization program. Solve the original program by solving the 1D reformulation. Solution: For now, set $x= 1/y$. Then the program becomes $\\min 2/y^2 +2 +2y^2$. Taking a derivative, we have $-4/y^3 + 4 y = 0$, so $4y^4=4$, so $y^4=1$, so $y=-1, 1$.  \n",
     "8. Convert the equality-constrained program $\\displaystyle \\min_{(p,q)\\in\\mathbb{R}^2} p\\log p + q\\log q$ subject to $p+q=1,\\: p\\geq 0, \\: q\\geq 0$ into a 1D optimization program. Solve the original program by solving the 1D reformulation. Solution: $q = 1-p$, then $\\min p\\log(p) + (1-p)\\log(1-p)$ subject to $0\\leq p\\leq 1$. Taking a derivative, we have $\\log(p) + 1 -\\log(1-p) -1=0$, so $\\log(p) = \\log(1-p)$, and hence $p=1/2$. So, $p=q=1/2$ is the solution to the original problem."
    ]
