Updated NN code

--- a/Lecture 04/lecture0402.ipynb
+++ b/Lecture 04/lecture0402.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,113 +122,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step: 0, Avg Cross Entropy: 0.684925, Gradient Norm: 3.021409, Training Accuracy: 56.8 percent\n",
-      "Step: 1, Avg Cross Entropy: 0.675549, Gradient Norm: 0.316272, Training Accuracy: 56.8 percent\n",
-      "Step: 2, Avg Cross Entropy: 0.665785, Gradient Norm: 1.961342, Training Accuracy: 56.8 percent\n",
-      "Step: 3, Avg Cross Entropy: 0.664687, Gradient Norm: 1.125810, Training Accuracy: 56.8 percent\n",
-      "Step: 4, Avg Cross Entropy: 0.664309, Gradient Norm: 0.604068, Training Accuracy: 56.8 percent\n",
-      "Step: 5, Avg Cross Entropy: 0.663998, Gradient Norm: 0.480739, Training Accuracy: 56.8 percent\n",
-      "Step: 6, Avg Cross Entropy: 0.663598, Gradient Norm: 0.775358, Training Accuracy: 56.8 percent\n",
-      "Step: 7, Avg Cross Entropy: 0.663291, Gradient Norm: 0.580687, Training Accuracy: 56.8 percent\n",
-      "Step: 8, Avg Cross Entropy: 0.663083, Gradient Norm: 0.469624, Training Accuracy: 56.8 percent\n",
-      "Step: 9, Avg Cross Entropy: 0.662664, Gradient Norm: 0.799686, Training Accuracy: 56.8 percent\n",
-      "Step: 10, Avg Cross Entropy: 0.662368, Gradient Norm: 0.584834, Training Accuracy: 56.8 percent\n",
-      "Step: 11, Avg Cross Entropy: 0.662230, Gradient Norm: 0.477273, Training Accuracy: 56.8 percent\n",
-      "Step: 12, Avg Cross Entropy: 0.661829, Gradient Norm: 0.885567, Training Accuracy: 56.8 percent\n",
-      "Step: 13, Avg Cross Entropy: 0.661506, Gradient Norm: 0.679527, Training Accuracy: 56.8 percent\n",
-      "Step: 14, Avg Cross Entropy: 0.661233, Gradient Norm: 0.540975, Training Accuracy: 56.8 percent\n",
-      "Step: 15, Avg Cross Entropy: 0.661063, Gradient Norm: 0.458573, Training Accuracy: 56.8 percent\n",
-      "Step: 16, Avg Cross Entropy: 0.660698, Gradient Norm: 0.844443, Training Accuracy: 56.8 percent\n",
-      "Step: 17, Avg Cross Entropy: 0.660390, Gradient Norm: 0.672866, Training Accuracy: 56.8 percent\n",
-      "Step: 18, Avg Cross Entropy: 0.615676, Gradient Norm: 0.550979, Training Accuracy: 56.8 percent\n",
-      "Step: 19, Avg Cross Entropy: 0.615434, Gradient Norm: 0.870377, Training Accuracy: 56.8 percent\n",
-      "Step: 20, Avg Cross Entropy: 0.615364, Gradient Norm: 0.411037, Training Accuracy: 56.8 percent\n",
-      "Step: 21, Avg Cross Entropy: 0.615221, Gradient Norm: 0.605631, Training Accuracy: 56.8 percent\n",
-      "Step: 22, Avg Cross Entropy: 0.615119, Gradient Norm: 0.331021, Training Accuracy: 56.8 percent\n",
-      "Step: 23, Avg Cross Entropy: 0.615070, Gradient Norm: 0.438396, Training Accuracy: 56.8 percent\n",
-      "Step: 24, Avg Cross Entropy: 0.614886, Gradient Norm: 0.584559, Training Accuracy: 56.8 percent\n",
-      "Step: 25, Avg Cross Entropy: 0.614569, Gradient Norm: 0.271976, Training Accuracy: 56.8 percent\n",
-      "Step: 26, Avg Cross Entropy: 0.614287, Gradient Norm: 0.753314, Training Accuracy: 56.8 percent\n",
-      "Step: 27, Avg Cross Entropy: 0.614065, Gradient Norm: 0.293088, Training Accuracy: 56.8 percent\n",
-      "Step: 28, Avg Cross Entropy: 0.613621, Gradient Norm: 1.008426, Training Accuracy: 56.8 percent\n",
-      "Step: 29, Avg Cross Entropy: 0.613492, Gradient Norm: 0.358224, Training Accuracy: 56.8 percent\n",
-      "Step: 30, Avg Cross Entropy: 0.613161, Gradient Norm: 0.817114, Training Accuracy: 56.8 percent\n",
-      "Step: 31, Avg Cross Entropy: 0.612811, Gradient Norm: 0.346977, Training Accuracy: 56.8 percent\n",
-      "Step: 32, Avg Cross Entropy: 0.612205, Gradient Norm: 1.223272, Training Accuracy: 56.8 percent\n",
-      "Step: 33, Avg Cross Entropy: 0.611978, Gradient Norm: 0.481062, Training Accuracy: 56.8 percent\n",
-      "Step: 34, Avg Cross Entropy: 0.611757, Gradient Norm: 0.579044, Training Accuracy: 56.8 percent\n",
-      "Step: 35, Avg Cross Entropy: 0.611476, Gradient Norm: 0.786115, Training Accuracy: 56.8 percent\n",
-      "Step: 36, Avg Cross Entropy: 0.611215, Gradient Norm: 0.453460, Training Accuracy: 56.8 percent\n",
-      "Step: 37, Avg Cross Entropy: 0.610770, Gradient Norm: 1.101224, Training Accuracy: 56.8 percent\n",
-      "Step: 38, Avg Cross Entropy: 0.610521, Gradient Norm: 0.521305, Training Accuracy: 56.8 percent\n",
-      "Step: 39, Avg Cross Entropy: 0.610384, Gradient Norm: 0.657404, Training Accuracy: 56.8 percent\n",
-      "Step: 40, Avg Cross Entropy: 0.609996, Gradient Norm: 0.886652, Training Accuracy: 56.8 percent\n",
-      "Step: 41, Avg Cross Entropy: 0.609701, Gradient Norm: 0.414086, Training Accuracy: 56.8 percent\n",
-      "Step: 42, Avg Cross Entropy: 0.608902, Gradient Norm: 1.524219, Training Accuracy: 56.8 percent\n",
-      "Step: 43, Avg Cross Entropy: 0.608787, Gradient Norm: 0.576029, Training Accuracy: 56.8 percent\n",
-      "Step: 44, Avg Cross Entropy: 0.608499, Gradient Norm: 0.758701, Training Accuracy: 56.8 percent\n",
-      "Step: 45, Avg Cross Entropy: 0.608092, Gradient Norm: 0.357284, Training Accuracy: 56.8 percent\n",
-      "Step: 46, Avg Cross Entropy: 0.607559, Gradient Norm: 1.209889, Training Accuracy: 56.8 percent\n",
-      "Step: 47, Avg Cross Entropy: 0.607390, Gradient Norm: 0.474595, Training Accuracy: 56.8 percent\n",
-      "Step: 48, Avg Cross Entropy: 0.607258, Gradient Norm: 0.571739, Training Accuracy: 56.8 percent\n",
-      "Step: 49, Avg Cross Entropy: 0.606995, Gradient Norm: 0.772878, Training Accuracy: 56.8 percent\n",
-      "Step: 50, Avg Cross Entropy: 0.606765, Gradient Norm: 0.380989, Training Accuracy: 56.8 percent\n",
-      "Step: 51, Avg Cross Entropy: 0.606466, Gradient Norm: 0.846712, Training Accuracy: 56.8 percent\n",
-      "Step: 52, Avg Cross Entropy: 0.606294, Gradient Norm: 0.393597, Training Accuracy: 56.8 percent\n",
-      "Step: 53, Avg Cross Entropy: 0.605941, Gradient Norm: 0.947666, Training Accuracy: 56.8 percent\n",
-      "Step: 54, Avg Cross Entropy: 0.605869, Gradient Norm: 0.414395, Training Accuracy: 56.8 percent\n",
-      "Step: 55, Avg Cross Entropy: 0.605422, Gradient Norm: 1.100736, Training Accuracy: 56.8 percent\n",
-      "Step: 56, Avg Cross Entropy: 0.605241, Gradient Norm: 0.451705, Training Accuracy: 56.8 percent\n",
-      "Step: 57, Avg Cross Entropy: 0.605102, Gradient Norm: 0.537287, Training Accuracy: 56.8 percent\n",
-      "Step: 58, Avg Cross Entropy: 0.604862, Gradient Norm: 0.708702, Training Accuracy: 56.8 percent\n",
-      "Step: 59, Avg Cross Entropy: 0.604757, Gradient Norm: 0.361883, Training Accuracy: 56.8 percent\n",
-      "Step: 60, Avg Cross Entropy: 0.604011, Gradient Norm: 1.540058, Training Accuracy: 56.8 percent\n",
-      "Step: 61, Avg Cross Entropy: 0.603800, Gradient Norm: 0.626815, Training Accuracy: 56.8 percent\n",
-      "Step: 62, Avg Cross Entropy: 0.603306, Gradient Norm: 0.346449, Training Accuracy: 80.2 percent\n",
-      "Step: 63, Avg Cross Entropy: 0.602873, Gradient Norm: 1.052502, Training Accuracy: 82.5 percent\n",
-      "Step: 64, Avg Cross Entropy: 0.602694, Gradient Norm: 0.431436, Training Accuracy: 82.5 percent\n",
-      "Step: 65, Avg Cross Entropy: 0.602544, Gradient Norm: 0.508255, Training Accuracy: 84.2 percent\n",
-      "Step: 66, Avg Cross Entropy: 0.602329, Gradient Norm: 0.681874, Training Accuracy: 84.2 percent\n",
-      "Step: 67, Avg Cross Entropy: 0.602097, Gradient Norm: 0.373634, Training Accuracy: 86.8 percent\n",
-      "Step: 68, Avg Cross Entropy: 0.601820, Gradient Norm: 0.853531, Training Accuracy: 85.2 percent\n",
-      "Step: 69, Avg Cross Entropy: 0.601637, Gradient Norm: 0.423879, Training Accuracy: 86.8 percent\n",
-      "Step: 70, Avg Cross Entropy: 0.601513, Gradient Norm: 0.519172, Training Accuracy: 85.5 percent\n",
-      "Step: 71, Avg Cross Entropy: 0.601270, Gradient Norm: 0.685951, Training Accuracy: 86.8 percent\n",
-      "Step: 72, Avg Cross Entropy: 0.600915, Gradient Norm: 0.351556, Training Accuracy: 85.5 percent\n",
-      "Step: 73, Avg Cross Entropy: 0.600361, Gradient Norm: 1.210819, Training Accuracy: 87.5 percent\n",
-      "Step: 74, Avg Cross Entropy: 0.600224, Gradient Norm: 0.482723, Training Accuracy: 86.5 percent\n",
-      "Step: 75, Avg Cross Entropy: 0.600007, Gradient Norm: 0.627770, Training Accuracy: 87.5 percent\n",
-      "Step: 76, Avg Cross Entropy: 0.599551, Gradient Norm: 0.346235, Training Accuracy: 86.5 percent\n",
-      "Step: 77, Avg Cross Entropy: 0.599089, Gradient Norm: 1.068814, Training Accuracy: 88.2 percent\n",
-      "Step: 78, Avg Cross Entropy: 0.598938, Gradient Norm: 0.442753, Training Accuracy: 87.2 percent\n",
-      "Step: 79, Avg Cross Entropy: 0.598852, Gradient Norm: 0.566396, Training Accuracy: 89.0 percent\n",
-      "Step: 80, Avg Cross Entropy: 0.598588, Gradient Norm: 0.892805, Training Accuracy: 87.5 percent\n",
-      "Step: 81, Avg Cross Entropy: 0.598453, Gradient Norm: 0.481788, Training Accuracy: 89.0 percent\n",
-      "Step: 82, Avg Cross Entropy: 0.598253, Gradient Norm: 0.713724, Training Accuracy: 87.8 percent\n",
-      "Step: 83, Avg Cross Entropy: 0.598090, Gradient Norm: 0.424345, Training Accuracy: 89.0 percent\n",
-      "Step: 84, Avg Cross Entropy: 0.597928, Gradient Norm: 0.585956, Training Accuracy: 88.5 percent\n",
-      "Step: 85, Avg Cross Entropy: 0.597829, Gradient Norm: 0.387165, Training Accuracy: 89.0 percent\n"
+      "Step: 0, Avg Cross Entropy: 0.655622, Gradient Norm: 6.340024, Training Accuracy: 77.0 percent\n",
+      "Step: 1, Avg Cross Entropy: 0.645090, Gradient Norm: 3.860301, Training Accuracy: 92.2 percent\n",
+      "Step: 2, Avg Cross Entropy: 0.642563, Gradient Norm: 3.222856, Training Accuracy: 88.8 percent\n",
+      "Step: 3, Avg Cross Entropy: 0.641745, Gradient Norm: 1.341964, Training Accuracy: 90.8 percent\n",
+      "Step: 4, Avg Cross Entropy: 0.641555, Gradient Norm: 0.446901, Training Accuracy: 89.8 percent\n",
+      "Step: 5, Avg Cross Entropy: 0.641458, Gradient Norm: 0.559665, Training Accuracy: 91.2 percent\n",
+      "Step: 6, Avg Cross Entropy: 0.641177, Gradient Norm: 0.804886, Training Accuracy: 90.0 percent\n",
+      "Step: 7, Avg Cross Entropy: 0.641008, Gradient Norm: 0.406676, Training Accuracy: 91.0 percent\n",
+      "Step: 8, Avg Cross Entropy: 0.640909, Gradient Norm: 0.515593, Training Accuracy: 89.5 percent\n",
+      "Step: 9, Avg Cross Entropy: 0.640662, Gradient Norm: 0.723036, Training Accuracy: 90.8 percent\n",
+      "Step: 10, Avg Cross Entropy: 0.640509, Gradient Norm: 0.372525, Training Accuracy: 89.2 percent\n",
+      "Step: 11, Avg Cross Entropy: 0.640180, Gradient Norm: 0.863126, Training Accuracy: 90.5 percent\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step: 86, Avg Cross Entropy: 0.597480, Gradient Norm: 1.098624, Training Accuracy: 87.8 percent\n",
-      "Step: 87, Avg Cross Entropy: 0.597292, Gradient Norm: 0.573762, Training Accuracy: 89.0 percent\n",
-      "Step: 88, Avg Cross Entropy: 0.597004, Gradient Norm: 0.351290, Training Accuracy: 87.2 percent\n",
-      "Step: 89, Avg Cross Entropy: 0.596403, Gradient Norm: 1.254805, Training Accuracy: 89.2 percent\n",
-      "Step: 90, Avg Cross Entropy: 0.596343, Gradient Norm: 0.529551, Training Accuracy: 87.8 percent\n",
-      "Step: 91, Avg Cross Entropy: 0.596053, Gradient Norm: 0.780033, Training Accuracy: 89.2 percent\n",
-      "Step: 92, Avg Cross Entropy: 0.595954, Gradient Norm: 0.391757, Training Accuracy: 87.8 percent\n",
-      "Step: 93, Avg Cross Entropy: 0.595549, Gradient Norm: 0.975885, Training Accuracy: 89.2 percent\n",
-      "Step: 94, Avg Cross Entropy: 0.595424, Gradient Norm: 0.445161, Training Accuracy: 88.8 percent\n",
-      "Step: 95, Avg Cross Entropy: 0.595221, Gradient Norm: 0.624149, Training Accuracy: 89.2 percent\n",
-      "Step: 96, Avg Cross Entropy: 0.595047, Gradient Norm: 0.375160, Training Accuracy: 88.8 percent\n",
-      "Step: 97, Avg Cross Entropy: 0.594716, Gradient Norm: 0.861971, Training Accuracy: 89.5 percent\n",
-      "Step: 98, Avg Cross Entropy: 0.594582, Gradient Norm: 0.426665, Training Accuracy: 89.0 percent\n",
-      "Step: 99, Avg Cross Entropy: 0.594395, Gradient Norm: 0.598559, Training Accuracy: 89.5 percent\n",
-      "Final test accuracy: 93.5 percent\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-52fb61df1398>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m     \u001b[0mngrad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 216\u001b[0;31m     \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mblock_backtracking\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mngrad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    217\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m     \u001b[0mtrain_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmatrix_softmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mnum_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m@\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-52fb61df1398>\u001b[0m in \u001b[0;36mdf\u001b[0;34m(var)\u001b[0m\n\u001b[1;32m     98\u001b[0m         \u001b[0;31m# Jacobian for psi_1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0mD_Z1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mZ1shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDlogit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZ1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         \u001b[0mback_prop1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchain_rule\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchain_rule\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mback_prop2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mD_X2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX2shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mD_Z1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mZ1shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0;31m# Jacobians for phi_1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-52fb61df1398>\u001b[0m in \u001b[0;36mchain_rule\u001b[0;34m(Dg, Df, var_shape)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mDg_axes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mDf_axes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensordot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDg_axes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDf_axes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Compute the Jacobian blocks of X @ W + b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/n8/anaconda/lib/python3.5/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36mtensordot\u001b[0;34m(a, b, axes)\u001b[0m\n\u001b[1;32m   1337\u001b[0m     \u001b[0mat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewaxes_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewshape_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1338\u001b[0m     \u001b[0mbt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewaxes_b\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewshape_b\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1339\u001b[0;31m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1340\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0molda\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0moldb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1341\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -410,7 +329,10 @@
     "    # Helper for random initialization\n",
     "    return np.reshape(sigma*rd.randn(shape[0]*shape[1]), shape)\n",
     "\n",
-    "### Begin gradient descent\n",
+    "### Begin gradient descent example\n",
+    "\n",
+    "### Random seed\n",
+    "rd.seed(1234)\n",
     "\n",
     "data = load_breast_cancer() # Loads the Wisconsin Breast Cancer dataset (569 examples in 30 dimensions)\n",
     "\n",
